# Dissertation

./: .gitignore  README.md  pyproject.toml
scripts/: preprocess  train
src/common/preprocess/: decoder.py  files.py  transformer.py
src/common/utils/: noisify.py  trainer.py
src/interfaces/utils/: noisify.py
src/model/: diffusionTransformer.py  patchDeEmbedding.py  patchEmbedding.py  transformer.py
src/preprocess/: preprocessor.py  spectrogramTransformer.py  wavDecoder.py  worker.py
src/preprocessing/: preprocessor.py  worker.py
src/preprocessing/decoders/: wavDecoder.py
src/preprocessing/transformers/: spectrogramTransformer.py
src/training/: trainer.py
src/utils/: dataset.py  endNoisify.py  midNoisify.py  noisify.py  randomNoisify.py  startNoisify.py  trainer.py
